--- a/courses2016JA.html
+++ b/courses2016JA.html
@@ -153,7 +153,7 @@
           </tr>
           <tr align="center" bgcolor="#ffffff" valign="top">
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian Institute of Science</a></td>
-            <td width="260"><a href="mailto:sysadmin@math.iisc.ernet.in">Contact
+            <td width="260"><a href="mailto:sysadmin@iisc.ac.in">Contact
 the Administrator</a></td>
             <td><a href="http://www.math.iisc.ernet.in/disclaimer.htm">Disclaimer</a></td>
           </tr>
