--- a/degprog-intphd.html
+++ b/degprog-intphd.html
@@ -133,7 +133,7 @@ their degree (including all examinations, project dissertations, viva voce, etc.
           <tr bgcolor="#FFFFFF" align="center" valign="top">
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:surender@math.iisc.ernet.in">Contact
+            <td width="260"><a href="mailto:surender@iisc.ac.in">Contact
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
