--- a/ifcaam/contact.html
+++ b/ifcaam/contact.html
@@ -34,7 +34,7 @@ Indian Institute of Science<br>
 Bangalore 560 012<br>
 India.<br>
 
-<b>Email:</b> ifcam@math.iisc.ernet.in<br>
+<b>Email:</b> ifcam@iisc.ac.in<br>
 <b>Tel:</b> +91-80-22933217<br>
 <b>Fax:</b> +91-80-2360 0156</p> 	 
 
