--- a/matholym.html
+++ b/matholym.html
@@ -33,7 +33,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top"> 
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:webmaster@math.iisc.ernet.in">Contact 
+            <td width="260"><a href="mailto:webmaster@iisc.ac.in">Contact 
               the Webmaster</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
