--- a/mathphd.html
+++ b/mathphd.html
@@ -31,7 +31,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:apal@math.iisc.ernet.in">apal[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:apal@iisc.ac.in">apal[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -58,7 +58,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:sayani@math.iisc.ernet.in">sayani[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:sayani@iisc.ac.in">sayani[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -82,7 +82,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:pradeep@math.iisc.ernet.in">pradeep[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:pradeep@iisc.ac.in">pradeep[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -106,7 +106,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                             
-			<td width="400"><a href="mailto:modysk@math.iisc.ernet.in">eskimo[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:modysk@iisc.ac.in">eskimo[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 			<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -129,7 +129,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:Kamana@math.iisc.ernet.in">kamana[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:Kamana@iisc.ac.in">kamana[at]math.iisc.ernet.in</a></td>
 			</tr>
                          <tr valign="top">
                         <td width="120">Home Page</td>
@@ -152,7 +152,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                             
-			<td width="400"><a href="mailto:raani@math.iisc.ernet.in">raani[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:raani@iisc.ac.in">raani[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 			<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -175,7 +175,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:bidyut@math.iisc.ernet.in">bidyut[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:bidyut@iisc.ac.in">bidyut[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -202,7 +202,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:biplab@math.iisc.ernet.in">biplab10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:biplab@iisc.ac.in">biplab10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -225,7 +225,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:Sudipto10@math.iisc.ernet.in"> sudipto10[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:Sudipto10@iisc.ac.in"> sudipto10[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -248,7 +248,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:rajeev10@math.iisc.ernet.in">rajeev10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:rajeev10@iisc.ac.in">rajeev10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -269,7 +269,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:pranav10@math.iisc.ernet.in">pranav10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:pranav10@iisc.ac.in">pranav10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -291,7 +291,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:joseph10@math.iisc.ernet.in">joseph10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:joseph10@iisc.ac.in">joseph10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -313,7 +313,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:ratna10@math.iisc.ernet.in">ratna10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:ratna10@iisc.ac.in">ratna10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -334,7 +334,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:tulasi10@math.iisc.ernet.in">tulasi10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:tulasi10@iisc.ac.in">tulasi10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -360,7 +360,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:balaji11@math.iisc.ernet.in"> balaji11[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:balaji11@iisc.ac.in"> balaji11[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -384,7 +384,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:Sudipto10@math.iisc.ernet.in"> kishore11[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:Sudipto10@iisc.ac.in"> kishore11[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -409,7 +409,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:aiyappan12@math.iisc.ernet.in">aiyappan12[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:aiyappan12@iisc.ac.in">aiyappan12[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -434,7 +434,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:monojit12@math.iisc.ernet.in">monojit12[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:monojit12@iisc.ac.in">monojit12[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -458,7 +458,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:somnath12@math.iisc.ernet.in">somnath12[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:somnath12@iisc.ac.in">somnath12[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -483,7 +483,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                              
-			<td width="400"><a href="mailto:sharat12@math.iisc.ernet.in">sharat12[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:sharat12@iisc.ac.in">sharat12[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 	    	<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -511,7 +511,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:rakesh13@math.iisc.ernet.in">rakesh13[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:rakesh13@iisc.ac.in">rakesh13[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -536,7 +536,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:anirban14@math.iisc.ernet.in">anirban14[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:anirban14@iisc.ac.in">anirban14[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -561,7 +561,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:prmath14@math.iisc.ernet.in">pramath14[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:prmath14@iisc.ac.in">pramath14[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -587,7 +587,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:ritwik14@math.iisc.ernet.in">ritwik14[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:ritwik14@iisc.ac.in">ritwik14[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -612,7 +612,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:sanjay14@math.iisc.ernet.in">sanjay14[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:sanjay14@iisc.ac.in">sanjay14[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -637,7 +637,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:sourav14@math.iisc.ernet.in">sourav14[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:sourav14@iisc.ac.in">sourav14[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -666,7 +666,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:lpriya15@math.iisc.ernet.in">lpriya15[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:lpriya15@iisc.ac.in">lpriya15[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -691,7 +691,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:paramita15@math.iisc.ernet.in">paramita15[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:paramita15@iisc.ac.in">paramita15[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -717,7 +717,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:srikanth15@math.iisc.ernet.in">srikanth15[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:srikanth15@iisc.ac.in">srikanth15[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -745,7 +745,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:mayuresh16@math.iisc.ernet.in">mayuresh16[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:mayuresh16@iisc.ac.in">mayuresh16[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -770,7 +770,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:khariram16@math.iisc.ernet.in">khariram16[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:khariram16@iisc.ac.in">khariram16[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -796,7 +796,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:anubhav16@math.iisc.ernet.in">anubhav16[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:anubhav16@iisc.ac.in">anubhav16[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -821,7 +821,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:teja16@math.iisc.ernet.in">teja16[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:teja16@iisc.ac.in">teja16[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -855,7 +855,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top"> 
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:surender@math.iisc.ernet.in">Contact 
+            <td width="260"><a href="mailto:surender@iisc.ac.in">Contact 
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
