--- a/pastevents-conf/conf.html
+++ b/pastevents-conf/conf.html
@@ -234,7 +234,7 @@ For further details, please contact:
 <A HREF="http://ece.iisc.ernet.in/bu.edu/karnataka/cities/bangalore/index.html">Bangalore</A> 560 012
 <A HREF="http://ece.iisc.ernet.in/india.html">INDIA</A>
 
-e-mail: <A HREF="mailto:rangaraj@math.iisc.ernet.in">rangaraj@math.iisc.ernet.in</A>
+e-mail: <A HREF="mailto:rangaraj@iisc.ac.in">rangaraj@iisc.ac.in</A>
 Fax: +91-80-3341683
 Tel: +91-80-3092265
 </PRE>
