--- a/people-staff.html
+++ b/people-staff.html
@@ -10,7 +10,7 @@
                 <tr valign="top">
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:bharathi@math.iisc.ernet.in">bharathi@math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:bharathi@iisc.ac.in">bharathi@iisc.ac.in</a></td>
                 </tr>
                 <tr valign="top">
                   <td width="120">Home Page</td>
@@ -34,7 +34,7 @@
                 <tr valign="top">
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:lakshmi@math.iisc.ernet.in">lakshmi@math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:lakshmi@iisc.ac.in">lakshmi@iisc.ac.in</a></td>
                 </tr>
                 <tr valign="top">
                   <td width="120">Home Page</td>
@@ -57,7 +57,7 @@
                 <tr valign="top">
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:rnaren@math.iisc.ernet.in">rnaren@math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:rnaren@iisc.ac.in">rnaren@iisc.ac.in</a></td>
                 </tr>
                 <tr valign="top">
                   <td width="120">Home Page</td>
@@ -79,7 +79,7 @@
 			  </tr>
 			  <tr valign="top"><td width="120">Email</td>
 			  <td width="5">:</td>
-			  <td width="400"><a href="mailto:library@math.iisc.ernet.in">library@math.iisc.ernet.in</a></td>
+			  <td width="400"><a href="mailto:library@iisc.ac.in">library@iisc.ac.in</a></td>
 			  </tr>
 			  <tr valign="top">
 			  <td width="120">Home Page</td>
@@ -97,7 +97,7 @@
 			   </tr>
 			   <tr valign="top"><td width="120">Email</td>
 			   <td width="5">:</td>
-			   <td width="400"><a href="mailto:rama@math.iisc.ernet.in">rama@math.iisc.ernet.in</a></td>
+			   <td width="400"><a href="mailto:rama@iisc.ac.in">rama@iisc.ac.in</a></td>
 			   </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -118,7 +118,7 @@
 			  <tr valign="top">
 			  <td width="120">Email</td>
 			  <td width="5">:</td>
-			  <td width="400"><a href="mailto:imi@math.iisc.ernet.in">imi@math.iisc.ernet.in</a></td>
+			  <td width="400"><a href="mailto:imi@iisc.ac.in">imi@iisc.ac.in</a></td>
 			  </tr>
 			  <tr valign="top">
 			  <td width="120">Home Page</td>
@@ -140,7 +140,7 @@
 			  <tr valign="top">
 			  <td width="120">Email</td>
 			  <td width="5">:</td>
-			  <td width="400"><a href="mailto:mathbio@math.iisc.ernet.in">mathbio@math.iisc.ernet.in</a></td>
+			  <td width="400"><a href="mailto:mathbio@iisc.ac.in">mathbio@iisc.ac.in</a></td>
 			  </tr>
 			  <tr valign="top">
 			  <td width="120">Home Page</td>
@@ -162,7 +162,7 @@
 		     <tr valign="top">
 		     <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:surender@math.iisc.ernet.in">surender@math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:surender@iisc.ac.in">surender@iisc.ac.in</a></td>
 			 </tr>-->
 			<!-- <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -190,7 +190,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top">
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact
+            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
