--- a/people-stu-phd.html
+++ b/people-stu-phd.html
@@ -29,7 +29,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:gpbalakumar@math.iisc.ernet.in">gpbalakumar[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:gpbalakumar@iisc.ac.in">gpbalakumar[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -52,7 +52,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:biplab@math.iisc.ernet.in">biplab10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:biplab@iisc.ac.in">biplab10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -76,7 +76,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:sayani@math.iisc.ernet.in">sayani[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:sayani@iisc.ac.in">sayani[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -99,7 +99,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                              
-			<td width="400"><a href="mailto:atreyee@math.iisc.ernet.in">atreyee[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:atreyee@iisc.ac.in">atreyee[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 	    	<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -121,7 +121,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:pradeep@math.iisc.ernet.in">pradeep[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:pradeep@iisc.ac.in">pradeep[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -147,7 +147,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:dganta@math.iisc.ernet.in">diganta[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:dganta@iisc.ac.in">diganta[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -169,7 +169,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:arghya11@math.iisc.ernet.in"> arghya11[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:arghya11@iisc.ac.in"> arghya11[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -193,7 +193,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:Sudipto10@math.iisc.ernet.in"> sudipto10[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:Sudipto10@iisc.ac.in"> sudipto10[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -210,7 +210,7 @@
             <table class="table">
 			<tr valign="top"><td width="120">Name</td><td width="5">:</td><td width="400">Bata Krishna Das</td></tr>
 			<tr valign="top"><td width="120">Email</td><td width="5">:</td>
-			<td width="400"><a href="mailto:batakrishna@math.iisc.ernet.in"> batakrishna[at]math.iisc.ernet.in</a></td></tr>
+			<td width="400"><a href="mailto:batakrishna@iisc.ac.in"> batakrishna[at]math.iisc.ernet.in</a></td></tr>
 			<tr valign="top"><td width="120">Home Page</td>
 			<td width="5">:</td>
 			<td width="400">&nbsp;</td>
@@ -228,7 +228,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:dheeraj@math.iisc.ernet.in">dheeraj[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:dheeraj@iisc.ac.in">dheeraj[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -251,7 +251,7 @@
 		  <tr valign="top">                                                                                                   
 		  <td width="120">Email</td>                                                              
 		  <td width="5">:</td>                                                                                                              
-				  <td width="400"><a href="mailto:rahulgarg@math.iisc.ernet.in">rahulgarg[at]math.iisc.ernet.in </a></td>
+				  <td width="400"><a href="mailto:rahulgarg@iisc.ac.in">rahulgarg[at]math.iisc.ernet.in </a></td>
 				  </tr>                                                                                                                             
 				  <tr valign="top">                                                                                                                 
 				  <td width="120">Home Page</td>                                                                                                    
@@ -275,7 +275,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:aatira@math.iisc.ernet.in">aatira[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:aatira@iisc.ac.in">aatira[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -296,7 +296,7 @@
 			  <tr valign="top">
 			  <td width="120">Email</td>
 			  <td width="5">:</td>
-			  <td width="400"><a href="mailto:sushil@math.iisc.ernet.in">sushil[at]math.iisc.ernet.in</a></td>
+			  <td width="400"><a href="mailto:sushil@iisc.ac.in">sushil[at]math.iisc.ernet.in</a></td>
 			  </tr>
 			  <tr valign="top">
 			  <td width="120">Home Page</td>
@@ -320,7 +320,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:rajeev10@math.iisc.ernet.in">rajeev10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:rajeev10@iisc.ac.in">rajeev10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -345,7 +345,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:hari@math.iisc.ernet.in">hari[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:hari@iisc.ac.in">hari[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -361,7 +361,7 @@
              <table class="table">
 			 <tr valign="top"><td width="120">Name</td><td width="5">:</td><td width="400">Gururaja. H. A</td></tr>
 			 <tr valign="top"><td width="120">Email</td><td width="5">:</td>
-		     <td width="400"><a href="mailto:gururaja@math.iisc.ernet.in"> gururaja[at]math.iisc.ernet.in</a></td></tr>
+		     <td width="400"><a href="mailto:gururaja@iisc.ac.in"> gururaja[at]math.iisc.ernet.in</a></td></tr>
 			 <tr valign="top"><td width="120">Home Page</td>
 			 <td width="5">:</td>
 			 <td width="400">&nbsp;</td>
@@ -380,7 +380,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:pranav10@math.iisc.ernet.in">pranav10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:pranav10@iisc.ac.in">pranav10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -404,7 +404,7 @@
 		  <tr valign="top">                                                                                                   
 		  <td width="120">Email</td>                                                              
 		  <td width="5">:</td>                                                                                                              
-		  <td width="400"><a href="mailto:tapanhota@math.iisc.ernet.in">tapanhota[at]math.iisc.ernet.in</a></td>
+		  <td width="400"><a href="mailto:tapanhota@iisc.ac.in">tapanhota[at]math.iisc.ernet.in</a></td>
 		  </tr>                                                                                                                             
 		  <tr valign="top">                                                                                                                 
 		  <td width="120">Home Page</td>                                                                                                    
@@ -427,7 +427,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:joseph10@math.iisc.ernet.in">joseph10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:joseph10@iisc.ac.in">joseph10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -450,7 +450,7 @@
 				 <tr valign="top">                                                                                                   
 				 <td width="120">Email</td>                                                              
 				 <td width="5">:</td>                                                                                                              
-				 <td width="400"><a href="mailto:dineshkumar@math.iisc.ernet.in">dineshkumar[at]math.iisc.ernet.in </a></td>
+				 <td width="400"><a href="mailto:dineshkumar@iisc.ac.in">dineshkumar[at]math.iisc.ernet.in </a></td>
 				 </tr>                                                                                                                             
 				 <tr valign="top">                                                                                                                 
 				 <td width="120">Home Page</td>                                                                                                    
@@ -477,7 +477,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                             
-			<td width="400"><a href="mailto:raani@math.iisc.ernet.in">raani[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:raani@iisc.ac.in">raani[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 			<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -499,7 +499,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:balaji11@math.iisc.ernet.in"> balaji11[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:balaji11@iisc.ac.in"> balaji11[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -521,7 +521,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:Sudipto10@math.iisc.ernet.in"> kishore11[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:Sudipto10@iisc.ac.in"> kishore11[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -545,7 +545,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:rahaman11@math.iisc.ernet.in"> rahaman11[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:rahaman11@iisc.ac.in"> rahaman11[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -569,7 +569,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                             
-			<td width="400"><a href="mailto:somamaity@math.iisc.ernet.in">somamaity[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:somamaity@iisc.ac.in">somamaity[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 			<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -592,7 +592,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                             
-			<td width="400"><a href="mailto:modysk@math.iisc.ernet.in">eskimo[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:modysk@iisc.ac.in">eskimo[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 			<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -615,7 +615,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:apal@math.iisc.ernet.in">apal[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:apal@iisc.ac.in">apal[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -639,7 +639,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:ratna10@math.iisc.ernet.in">ratna10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:ratna10@iisc.ac.in">ratna10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -664,7 +664,7 @@
 				<tr valign="top">
 				<td width="120">Email</td>
 				<td width="5">:</td>
-				<td width="400"><a href="mailto:sourav@math.iisc.ernet.in">sourav[at]math.iisc.ernet.in</a></td>
+				<td width="400"><a href="mailto:sourav@iisc.ac.in">sourav[at]math.iisc.ernet.in</a></td>
 				</tr>
 				<tr valign="top">
 				<td width="120">Home Page</td>
@@ -686,7 +686,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:Kamana@math.iisc.ernet.in">kamana[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:Kamana@iisc.ac.in">kamana[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<!--<tr valign="top">
 			<td width="120">Home Page</td>
@@ -716,7 +716,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:tulasi10@math.iisc.ernet.in">tulasi10[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:tulasi10@iisc.ac.in">tulasi10[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -739,7 +739,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                             
-			<td width="400"><a href="mailto:sanjay@math.iisc.ernet.in">sanjay[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:sanjay@iisc.ac.in">sanjay[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 			<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -762,7 +762,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:bidyut@math.iisc.ernet.in">bidyut[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:bidyut@iisc.ac.in">bidyut[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -785,7 +785,7 @@
 					  <tr valign="top">
 					  <td width="120">Email</td>
 					  <td width="5">:</td>
-					  <td width="400"><a href="mailto:sachin@math.iisc.ernet.in">sachin[at]math.iisc.ernet.in</a></td>
+					  <td width="400"><a href="mailto:sachin@iisc.ac.in">sachin[at]math.iisc.ernet.in</a></td>
 					  </tr>
 					  <tr valign="top">
 					  <td width="120">Home Page</td>
@@ -804,7 +804,7 @@
                          <table class="table">
 			 <tr valign="top"><td width="120">Name</td><td width="5">:</td><td width="400">Amit Tripathi</td></tr>
 			 <tr valign="top"><td width="120">Email</td><td width="5">:</td>
-		         <td width="400"><a href="mailto:atripathi@math.iisc.ernet.in"> atripathi[at]math.iisc.ernet.in</a></td></tr>
+		         <td width="400"><a href="mailto:atripathi@iisc.ac.in"> atripathi[at]math.iisc.ernet.in</a></td></tr>
 			 <tr valign="top"><td width="120">Home Page</td>
 			 <td width="5">:</td>
 		         <td width="400">&nbsp;</td>
@@ -829,7 +829,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top"> 
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact 
+            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact 
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
