--- a/people_emisci.html
+++ b/people_emisci.html
@@ -3,7 +3,7 @@
 <center>
 
             <p><u>Listed alphabetically by Last Name.</u></p>
-            <p><u>To Email : UserID@math.iisc.ernet.in</u></p>
+            <p><u>To Email : UserID@iisc.ac.in</u></p>
             <p>
 
 
@@ -56,7 +56,7 @@ Algebraic Geometry, vector bundles, principal bundles</td>
                 <tr valign="top">
                 </tr>
                 <tr valign="top">
-                  <td width="400"><a href="maillto:bhosle@math.iisc.ernet.in">bhosle[at]math[dot]iisc[dot]ernet[dot]in </td>
+                  <td width="400"><a href="maillto:bhosle@iisc.ac.in">bhosle[at]math[dot]iisc[dot]ernet[dot]in </td>
                 </tr>
                 <tr valign="top">
                   <td width="400">&nbsp;</td>
@@ -134,7 +134,7 @@ Algebraic Geometry, vector bundles, principal bundles</td>
           <tr align="center" bgcolor="#ffffff" valign="top">
             <td width="260"><a href="http://www.iisc.ernet.in/"
  target="_blank">Indian Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact
+            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact
 the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
