--- a/postdocs.html
+++ b/postdocs.html
@@ -9,7 +9,7 @@ title: Postdocs
   <tr>
     <td class="col-md-7"><div><h4>{{ stu.name }}</h4> </div>
         <div>
-          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@math.iisc.ernet.in">{{stu.user-id}}@math.iisc.ernet.in</a>
+          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
         </div>
         {% if stu.webpage %}
         <div>
