--- a/seminar/senov29.html
+++ b/seminar/senov29.html
@@ -82,7 +82,7 @@ class=GramE><span style='font-size:12.0pt;mso-bidi-font-size:10.0pt;font-family:
 "Times New Roman"'>e-mail</span></span><span style='font-size:12.0pt;
 mso-bidi-font-size:10.0pt;font-family:"Times New Roman"'>: <a
 href="https://math.iisc.ernet.in/webmail/src/compose.php?send_to=vasuki%40math.iisc.ernet.in"
-target=right>vasuki@math.iisc.ernet.in</a><o:p></o:p></span></pre><pre><o:p>&nbsp;</o:p></pre>
+target=right>vasuki@iisc.ac.in</a><o:p></o:p></span></pre><pre><o:p>&nbsp;</o:p></pre>
 
 <p class=MsoNormal style='margin-bottom:12.0pt'><o:p>&nbsp;</o:p></p>
 
