--- a/seminar/seoct25.html
+++ b/seminar/seoct25.html
@@ -117,6 +117,6 @@ Nonlinear Studies Group<br>
 Department of Mathematics,<br>
 Indian Institute of Science,<br>
 Bangalore . 560 012<br>
-e-mail: vasuki@math.iisc.ernet.in<br>
+e-mail: vasuki@iisc.ac.in<br>
 <br>
 </div>
