--- a/disclaimer.html
+++ b/disclaimer.html
@@ -42,7 +42,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top"> 
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:jey@math.iisc.ernet.in">Contact 
+            <td width="260"><a href="mailto:jey@iisc.ac.in">Contact 
               the Administrator</a></td>
             <td>Disclaimer</td>
           </tr>
