--- a/inspire.html
+++ b/inspire.html
@@ -13,7 +13,7 @@ title: INSPIRE fellows and DST scientists
         <strong>Research areas:</strong> {{ stu.research-areas}}
       </div>
         <div>
-          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@math.iisc.ernet.in">{{stu.user-id}}@math.iisc.ernet.in</a>
+          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
         </div>
         {% if stu.webpage %}
         <div>
