--- a/jrf.html
+++ b/jrf.html
@@ -28,7 +28,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:gpbalakumar@math.iisc.ernet.in">gpbalakumar[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:gpbalakumar@iisc.ac.in">gpbalakumar[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -49,7 +49,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:dheeraj@math.iisc.ernet.in">dheeraj[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:dheeraj@iisc.ac.in">dheeraj[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -71,7 +71,7 @@
 		  <tr valign="top">                                                                                                   
 		  <td width="120">Email</td>                                                              
 		  <td width="5">:</td>                                                                                                              
-				  <td width="400"><a href="mailto:rahulgarg@math.iisc.ernet.in">rahulgarg[at]math.iisc.ernet.in </a></td>
+				  <td width="400"><a href="mailto:rahulgarg@iisc.ac.in">rahulgarg[at]math.iisc.ernet.in </a></td>
 				  </tr>                                                                                                                             
 				  <tr valign="top">                                                                                                                 
 				  <td width="120">Home Page</td>                                                                                                    
@@ -94,7 +94,7 @@
 				 <tr valign="top">                                                                                                   
 				 <td width="120">Email</td>                                                              
 				 <td width="5">:</td>                                                                                                              
-				 <td width="400"><a href="mailto:dineshkumar@math.iisc.ernet.in">dineshkumar[at]math.iisc.ernet.in </a></td>
+				 <td width="400"><a href="mailto:dineshkumar@iisc.ac.in">dineshkumar[at]math.iisc.ernet.in </a></td>
 				 </tr>                                                                                                                             
 				 <tr valign="top">                                                                                                                 
 				 <td width="120">Home Page</td>                                                                                                    
@@ -119,7 +119,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                             
-			<td width="400"><a href="mailto:somamaity@math.iisc.ernet.in">somamaity[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:somamaity@iisc.ac.in">somamaity[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 			<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -144,7 +144,7 @@
 			<tr valign="top">                                                                                                   
 			<td width="120">Email</td>                                                              
 			<td width="5">:</td>                                                                                                             
-			<td width="400"><a href="mailto:sanjay@math.iisc.ernet.in">sanjay[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:sanjay@iisc.ac.in">sanjay[at]math.iisc.ernet.in</a></td>
 			</tr>                                                                                                                            
 			<tr valign="top">                                                                                                                
 			<td width="120">Home Page</td>                                                                                                   
@@ -169,7 +169,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:amit@math.iisc.ernet.in">amit[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:amit@iisc.ac.in">amit[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -195,7 +195,7 @@
 			<tr valign="top">
 			<td width="120">Email</td>
 			<td width="5">:</td>
-			<td width="400"><a href="mailto:jyoti@math.iisc.ernet.in">jyoti[at]math.iisc.ernet.in</a></td>
+			<td width="400"><a href="mailto:jyoti@iisc.ac.in">jyoti[at]math.iisc.ernet.in</a></td>
 			</tr>
 			<tr valign="top">
 			<td width="120">Home Page</td>
@@ -225,7 +225,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top"> 
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact 
+            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact 
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
