--- a/people-postdoc.html
+++ b/people-postdoc.html
@@ -31,7 +31,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:anita@math.iisc.ernet.in">anita[at]math.iisc.ernet.in</a></td>
+                  <td width="400"><a href="mailto:anita@iisc.ac.in">anita[at]math.iisc.ernet.in</a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -56,7 +56,7 @@
 			   <tr valign="top">
 			   <td width="120">Email</td>
 			   <td width="5">:</td>
-			   <td width="400"><a href="mailto:malik@math.iisc.ernet.in">mmalik[at]math.iisc.ernet.in</a></td>
+			   <td width="400"><a href="mailto:malik@iisc.ac.in">mmalik[at]math.iisc.ernet.in</a></td>
 			   </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -78,7 +78,7 @@
 			   <tr valign="top">
 			   <td width="120">Email</td>
 				<td width="5">:</td>
-				<td width="400"><a href="mailto:tejawi@math.iisc.ernet.in">tejaswi[at]math.iisc.ernet.in</a></td>
+				<td width="400"><a href="mailto:tejawi@iisc.ac.in">tejaswi[at]math.iisc.ernet.in</a></td>
 				</tr>
 				<tr valign="top">
 				<td width="120">Home Page</td>
@@ -100,7 +100,7 @@
 			  <tr valign="top">
 			    <td width="120">Email</td>
 			    <td width="5">:</td>
-			    <td width="400"><a href="mailto:karabi@math.iisc.ernet.in">karabi[at]math.iisc.ernet.in</a></td>        
+			    <td width="400"><a href="mailto:karabi@iisc.ac.in">karabi[at]math.iisc.ernet.in</a></td>        
 			  </tr>
 			  <tr valign="top">
 			    <td width="120">Home Page</td>
@@ -122,7 +122,7 @@
 			      <td width="400">V.V.K.Srinivas Kumar </td>
 			    </tr>
 				<tr valign="top"> <td width="120">Email</td>       
-			    <td width="5">:</td><td width="400"><a href="mailto:vvksrini@math.iisc.ernet.in">vvksrini[at]math.iisc.ernet.in</a>    
+			    <td width="5">:</td><td width="400"><a href="mailto:vvksrini@iisc.ac.in">vvksrini[at]math.iisc.ernet.in</a>    
 				</td> </tr>
 		        <tr valign="top">
 				<td width="120">Home Page</td>										            
@@ -142,7 +142,7 @@
 			   <td width="400">Aparajita Dasgupta</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:adgupta@math.iisc.ernet.in">adgupta[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:adgupta@iisc.ac.in">adgupta[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -162,7 +162,7 @@
 			   <td width="400">Dr. Anoop T. V. </td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:anoop11@math.iisc.ernet.in">anoop11[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:anoop11@iisc.ac.in">anoop11[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -181,7 +181,7 @@
 			   <td width="400">Anuradha Jha </td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:anuradha13@math.iisc.ernet.in">anuradha13[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:anuradha13@iisc.ac.in">anuradha13[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -203,7 +203,7 @@
 			   <td width="400">Dr. David Micheal Farris </td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:farris@math.iisc.ernet.in">farris[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:farris@iisc.ac.in">farris[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -223,7 +223,7 @@
 			   <td width="400">Dr. Dhanya </td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:dhanya13@math.iisc.ernet.in">dhanya13[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:dhanya13@iisc.ac.in">dhanya13[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -247,7 +247,7 @@
                             <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-chan.png" border="1" width="100" height="110"> </td>
                            </tr>
                            <tr valign="top"> <td width="120">Email</td>
-                           <td width="5">:</td><td width="400"><a href="mailto:chandan14@math.iisc.ernet.in">chandan14[at]math.iisc.ernet.in</a>
+                           <td width="5">:</td><td width="400"><a href="mailto:chandan14@iisc.ac.in">chandan14[at]math.iisc.ernet.in</a>
                            </td> </tr>
                            <tr valign="top">
                            <td width="120">Home Page</td>
@@ -267,7 +267,7 @@
 			   <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-dipendu.jpg" border="1" width="100" height="110"> </td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:dipendumaity16@math.iisc.ernet.in">dipendumaity16[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:dipendumaity16@iisc.ac.in">dipendumaity16[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -290,7 +290,7 @@
                             <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-kalai.jpg" border="1" width="100" height="110"> </td>
                            </tr>
                            <tr valign="top"> <td width="120">Email</td>
-                           <td width="5">:</td><td width="400"><a href="mailto:kalai15@math.iisc.ernet.in">kalai15[at]math.iisc.ernet.in</a>
+                           <td width="5">:</td><td width="400"><a href="mailto:kalai15@iisc.ac.in">kalai15[at]math.iisc.ernet.in</a>
                            </td> </tr>
                            <tr valign="top">
                            <td width="120">Home Page</td>
@@ -312,7 +312,7 @@
                             <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-km.jpg" border="1" width="100" height="110"> </td>
                            </tr>
                            <tr valign="top"> <td width="120">Email</td>
-                           <td width="5">:</td><td width="400"><a href="mailto:kaustubh@math.iisc.ernet.in">kaustubh[at]math.iisc.ernet.in</a>
+                           <td width="5">:</td><td width="400"><a href="mailto:kaustubh@iisc.ac.in">kaustubh[at]math.iisc.ernet.in</a>
                            </td> </tr>
                            <tr valign="top">
                            <td width="120">Home Page</td>
@@ -337,7 +337,7 @@
 			   <td width="400">R.Lakshmi Lavanya </td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:lakshmi12@math.iisc.ernet.in">lakshmi12[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:lakshmi12@iisc.ac.in">lakshmi12[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -359,7 +359,7 @@
                             <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-mani.JPG" border="1" width="100" height="110"> </td>
                            </tr>
                            <tr valign="top"> <td width="120">Email</td>
-                           <td width="5">:</td><td width="400"><a href="mailto:manikandan14@math.iisc.ernet.in">manikandan14[at]math.iisc.ernet.in</a>
+                           <td width="5">:</td><td width="400"><a href="mailto:manikandan14@iisc.ac.in">manikandan14[at]math.iisc.ernet.in</a>
                            </td> </tr>
                            <tr valign="top">
                            <td width="120">Home Page</td>
@@ -380,7 +380,7 @@
 			   <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-sathis.jpg" border="1" width="100" height="110"> </td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:sathish16@math.iisc.ernet.in">sathish16[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:sathish16@iisc.ac.in">sathish16[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -403,7 +403,7 @@
 			    <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-sumit.jpg" border="1" width="100" height="110"> </td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:sumit15@math.iisc.ernet.in">sumit15[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:sumit15@iisc.ac.in">sumit15[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -429,7 +429,7 @@
 			   <td width="400">Dr. Micah Miller </td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:miller12@math.iisc.ernet.in">miller12[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:miller12@iisc.ac.in">miller12[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -449,7 +449,7 @@
 			   <td width="400">Samrith Ram</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:samrith15@math.iisc.ernet.in">samrith15[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:samrith15@iisc.ac.in">samrith15[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -470,7 +470,7 @@
                             <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-surjit.jpg" border="1" width="100" height="110"> </td>
                            </tr>
                            <tr valign="top"> <td width="120">Email</td>
-                           <td width="5">:</td><td width="400"><a href="mailto:surjitk15@math.iisc.ernet.in">surjitk15[at]math.iisc.ernet.in</a>
+                           <td width="5">:</td><td width="400"><a href="mailto:surjitk15@iisc.ac.in">surjitk15[at]math.iisc.ernet.in</a>
                            </td> </tr>
                            <tr valign="top">
                            <td width="120">Home Page</td>
@@ -490,7 +490,7 @@
 			   <td width="400">Subash Chandra Martha</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:scmarth@math.iisc.ernet.in">scmartha[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:scmarth@iisc.ac.in">scmartha[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -512,7 +512,7 @@
 				<tr valign="top">
 				<td width="120">Email</td>
 				<td width="5">:</td>
-				<td width="400"><a href="mailto:tmk@math.iisc.ernet.in">tmk[at]math.iisc.ernet.in</a></td>
+				<td width="400"><a href="mailto:tmk@iisc.ac.in">tmk[at]math.iisc.ernet.in</a></td>
 			    </tr>
 			    <tr valign="top">
 			    <td width="120">Home Page</td>
@@ -533,7 +533,7 @@
 			   <td width="400">Sushil Gorai</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:sushil@math.iisc.ernet.in">sushil[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:sushil@iisc.ac.in">sushil[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="130">Home Page</td>
@@ -553,7 +553,7 @@
 			   <td width="400">Dr. Hari Shanker Gupta</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:hari@math.iisc.ernet.in">hari[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:hari@iisc.ac.in">hari[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -573,7 +573,7 @@
 			   <td width="400">Dr. Nidhin K</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:nidhin@math.iisc.ernet.in">nidhin[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:nidhin@iisc.ac.in">nidhin[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -593,7 +593,7 @@
 			   <td width="400">Dr. Sameer Kamal</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:sameer11@math.iisc.ernet.in">sameer11[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:sameer11@iisc.ac.in">sameer11[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -613,7 +613,7 @@
                             <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-ashisha.jpg" border="1" width="100" height="110"> </td>
                            </tr>
                            <tr valign="top"> <td width="120">Email</td>
-                           <td width="5">:</td><td width="400"><a href="mailto:ashish10@math.iisc.ernet.in">ashisha10[at]math.iisc.ernet.in</a>
+                           <td width="5">:</td><td width="400"><a href="mailto:ashish10@iisc.ac.in">ashisha10[at]math.iisc.ernet.in</a>
                            </td> </tr>
                            <tr valign="top">
                            <td width="120">Home Page</td>
@@ -634,7 +634,7 @@
 			     <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/stu-sohani.jpg" border="1" width="100" height="110"> </td>
                            </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:vksohani@math.iisc.ernet.in">vksohani[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:vksohani@iisc.ac.in">vksohani[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -655,7 +655,7 @@
                            <td width="400">Smruti Ranjan Mohapatra</td>
                            </tr>
                            <tr valign="top"> <td width="120">Email</td>
-                           <td width="5">:</td><td width="400"><a href="mailto:smruti11@math.iisc.ernet.in">smruti11[at]math.iisc.ernet.in</a>
+                           <td width="5">:</td><td width="400"><a href="mailto:smruti11@iisc.ac.in">smruti11[at]math.iisc.ernet.in</a>
                            </td> </tr>
                            <tr valign="top">
                            <td width="120">Home Page</td>
@@ -675,7 +675,7 @@
 			   <td width="400">Dr. Venku Naidu</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:venku1111@math.iisc.ernet.in">venku11[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:venku1111@iisc.ac.in">venku11[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -694,7 +694,7 @@
 			   <td width="400">Dr. Souman Sarkar</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:souman12@math.iisc.ernet.in">souman12[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:souman12@iisc.ac.in">souman12[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -713,7 +713,7 @@
 			   <td width="400">Dr. Koushik Saha</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:koushik12@math.iisc.ernet.in">koushik12[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:koushik12@iisc.ac.in">koushik12[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -732,7 +732,7 @@
 			   <td width="400">Dr. Rajesh K Srivastava</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:rksri11@math.iisc.ernet.in">rksri11[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:rksri11@iisc.ac.in">rksri11[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -752,7 +752,7 @@
 			   <td width="400">Manoj Kumar Yadav</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:manojy10@math.iisc.ernet.in">manojy10[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:manojy10@iisc.ac.in">manojy10[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -772,7 +772,7 @@
 			   <td width="400">Sudheesh</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:sudheesh@math.iisc.ernet.in">sudheesh[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:sudheesh@iisc.ac.in">sudheesh[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -792,7 +792,7 @@
 			   <td width="400">Ranja Sarkar</td>
 			   </tr>
 			   <tr valign="top"> <td width="120">Email</td>
-			   <td width="5">:</td><td width="400"><a href="mailto:ranja@math.iisc.ernet.in">ranja[at]math.iisc.ernet.in</a>
+			   <td width="5">:</td><td width="400"><a href="mailto:ranja@iisc.ac.in">ranja[at]math.iisc.ernet.in</a>
 			   </td> </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -819,7 +819,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top"> 
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact 
+            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact 
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
