--- a/people-stu-intdisphd.html
+++ b/people-stu-intdisphd.html
@@ -29,7 +29,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:sumanta@math.iisc.ernet.in">sumanta[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:sumanta@iisc.ac.in">sumanta[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -52,7 +52,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:nitin@math.iisc.ernet.in">nitin[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:nitin@iisc.ac.in">nitin[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -75,7 +75,7 @@
 			 <tr valign="top">
 			 <td width="120">Email</td>
 			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:sudarshan@math.iisc.ernet.in">sudarshan[at]math.iisc.ernet.in</a></td>
+			 <td width="400"><a href="mailto:sudarshan@iisc.ac.in">sudarshan[at]math.iisc.ernet.in</a></td>
 			 </tr>
 			 <tr valign="top">
 			 <td width="120">Home Page</td>
@@ -106,7 +106,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top"> 
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact 
+            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact 
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
