--- a/people-trainee.html
+++ b/people-trainee.html
@@ -25,7 +25,7 @@
                 <tr valign="top"> 
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:@math.iisc.ernet.in"></a></td>
+                  <td width="400"><a href="mailto:@iisc.ac.in"></a></td>
                 </tr>
                 <tr valign="top"> 
                   <td width="120">Home Page</td>
@@ -50,7 +50,7 @@
 			   <tr valign="top">
 			   <td width="120">Email</td>
 			   <td width="5">:</td>
-			   <td width="400"><a href="mailto:pratheeb12@math.iisc.ernet.in">pratheeb12@math.iisc.ernet.in</a></td>
+			   <td width="400"><a href="mailto:pratheeb12@iisc.ac.in">pratheeb12@iisc.ac.in</a></td>
 			   </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -72,7 +72,7 @@
 			  </tr>
 			  <tr valign="top"><td width="120">Email</td>
 			  <td width="5">:</td>
-			  <td width="400"><a href="mailto:library@math.iisc.ernet.in">library@math.iisc.ernet.in</a></td>
+			  <td width="400"><a href="mailto:library@iisc.ac.in">library@iisc.ac.in</a></td>
 			  </tr>
 			  <tr valign="top">
 			  <td width="120">Home Page</td>
@@ -89,7 +89,7 @@
 			   <tr valign="top">
 			   <td width="120">Email</td>
 			   <td width="5">:</td>
-			   <td width="400"><a href="mailto:surender@math.iisc.ernet.in">surender@math.iisc.ernet.in</a></td>
+			   <td width="400"><a href="mailto:surender@iisc.ac.in">surender@iisc.ac.in</a></td>
 			   </tr>
 			   <tr valign="top">
 			   <td width="120">Home Page</td>
@@ -112,7 +112,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top"> 
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact 
+            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact 
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
