--- a/people_if.html
+++ b/people_if.html
@@ -27,7 +27,7 @@ Fellows</a> | <a href="people-stu.html">Students</a> | <a
               </tbody>
             </table>
             <p><u>Listed alphabetically by Last Name.</u></p>
-            <p><u>To Email : UserID@math.iisc.ernet.in</u></p>
+            <p><u>To Email : UserID@iisc.ac.in</u></p>
           
             
 
@@ -227,7 +227,7 @@ Fellows</a> | <a href="people-stu.html">Students</a> | <a
           <tr align="center" bgcolor="#ffffff" valign="top">
             <td width="260"><a href="http://www.iisc.ernet.in/"
  target="_blank">Indian Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact
+            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact
 the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
