--- a/seminars2006.html
+++ b/seminars2006.html
@@ -310,7 +310,7 @@
           <tr bgcolor="#FFFFFF" align="center" valign="top"> 
             <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
               Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact 
+            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact 
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
