--- a/students-intdisphd.html
+++ b/students-intdisphd.html
@@ -22,7 +22,7 @@ title: Interdisciplinary PhD students
         <strong>Program:</strong> {{ stu.programme}}
       </div>
         <div>
-          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@math.iisc.ernet.in">{{stu.user-id}}@math.iisc.ernet.in</a>
+          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
         </div>
         {% if stu.webpage %}
         <div>
